# qua_old

./: Cargo.toml  README.md
crates/qua_client/: Cargo.toml  Dioxus.toml
crates/qua_client/public/assets/: style.css
crates/qua_client/src/: main.rs
crates/qua_client/src/components/: create_room_form.rs  error_popup.rs  game_answer_button.rs  game_begin_button.rs  game_board.rs  game_board_question_button.rs  game_board_theme.rs  game_button.rs  game_count_correct_button.rs  game_count_wrong_button.rs  game_handler.rs  game_host.rs  game_host_card.rs  game_info.rs  game_main.rs  game_media_content.rs  game_overview.rs  game_player_card.rs  game_player_list.rs  game_progress_bar.rs  game_question_matter.rs  game_round_preview.rs  game_timeout_button.rs  game_timer.rs  join_room_form.rs  menu_card.rs  mod.rs  nav.rs  package_editor.rs  package_info_card.rs  package_open_button.rs  package_question_card.rs  package_question_card_list.rs  package_round_card.rs  package_round_card_list.rs  package_save_button.rs  package_theme_item.rs  player_card.rs  player_list.rs
crates/qua_client/src/contexts/: mod.rs  package_resource.rs
crates/qua_client/src/pages/: create.rs  game.rs  home.rs  join.rs  mod.rs  room.rs
crates/qua_client/src/services/: auth.rs  game.rs  mod.rs  room.rs  time.rs
crates/qua_game/: Cargo.toml  README.md
crates/qua_game/src/: lib.rs  scores.rs
crates/qua_game/src/game/: answering_game_state.rs  asking_game_state.rs  board_game_state.rs  client_server.rs  game_context.rs  game_events.rs  game_inputs.rs  greet_game_state.rs  init_game_state.rs  mod.rs  overview_game_state.rs  question_answer_game_state.rs  question_appearance_game_state.rs  question_asking_game_state.rs  question_matter_game_state.rs  question_qua_answering_game_state.rs  question_qua_queue_game_state.rs  question_qua_waiting_game_state.rs  show_answer_game_state.rs  waiting_answer_game_state.rs
crates/qua_game/src/game/states/: board_game_state.rs  ending_game_state.rs  greet_game_state.rs  init_game_state.rs  mod.rs  overview_game_state.rs  picking_game_state.rs  question_answer_game_state.rs  question_appearance_game_state.rs  question_asking_game_state.rs  question_matter_game_state.rs  question_qua_answering_game_state.rs  question_qua_queue_game_state.rs  question_qua_waiting_game_state.rs  round_preview_game_state.rs
crates/qua_game/src/package/: mod.rs  package.rs  question.rs  round.rs  theme.rs
crates/qua_game/src/person/: host.rs  mod.rs  player.rs
crates/qua_package/: Cargo.toml
crates/qua_package/src/: lib.rs  package_config.rs  package_resource.rs
crates/qua_server/: Cargo.toml
crates/qua_server/src/: auth.rs  main.rs
crates/qua_server/src/errors/: mod.rs  room_error.rs
crates/qua_server/src/models/: mod.rs  room.rs  room_code.rs  room_id.rs  ticket.rs  ticket_data.rs
crates/qua_server/src/routes/: create_room.rs  get_room_package.rs  join_room.rs  mod.rs  obtain_ticket.rs
crates/qua_server/src/services/: event_bus.rs  game_service.rs  lobby_service.rs  mod.rs  room_service.rs  ticket_service.rs
crates/qua_server/uploads/: 44_game.qua
