[package]
name = "qua"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*"]

[workspace.dependencies]
log = "0.4.6"
console_error_panic_hook = "0.1.7"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
getrandom = { version = "0.2", features = ["js"] }
ws_stream_wasm = { version = "0.7", features = ["tokio_io"]}
futures-util = "0.3.21"
dioxus = { git = "https://github.com/dioxuslabs/dioxus" }
dioxus-web = { git = "https://github.com/dioxuslabs/dioxus" }
dioxus-router = { git = "https://github.com/dioxuslabs/dioxus" }
fermi = { git = "https://github.com/dioxuslabs/dioxus" }
reqwest = { version = "0.11.16", features = ["json", "multipart"] }
axum = { version = "0.6.4", features = ["ws", "headers", "macros", "multipart"] }
tokio = { version = "1.0", default-features = false, features = ["sync", "rt", "macros", "time"] }
tokio-util = { version = "0.7.8", default-features = false, features = ["io"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["cors", "trace"] }
http = "0.2.9"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.0.0"
toml = "0.7.1"
serde_json = "1.0"
once_cell = "1.8"
jsonwebtoken = "8.2.0"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres"] }
wasm-logger = "0.2.0"
rand = "0.8.5"
futures = "0.3"
async-timer = "1.0.0-beta.9 "
wasm-sockets = "1.0.0"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
web-sys = { version = "0.3.63", features = ["Url"] }
wasm-bindgen = { version = "0.2.86" }
js-sys = { version = "0.3.63" }
