[package]
name = "qua_client"
version = "0.1.0"
authors = ["Breadp4ck <iii103@mail.ru>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qua_game = { path = "../qua_game", version = "0.1.0" }
qua_package = { path = "../qua_package", version = "0.1.0" }
getrandom = { workspace = true, features = ["js"] }
ws_stream_wasm.workspace = true
futures-util.workspace = true
dioxus.workspace = true
dioxus-web.workspace = true
log.workspace = true
console_error_panic_hook.workspace = true
reqwest = { workspace = true, features = ["json", "multipart"] }
serde = { workspace = true, features = ["derive"] }
dioxus-router.workspace = true
wasm-logger.workspace = true
tokio.workspace = true
ewebsock = "0.2"
