[package]
name = "qua_package"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qua_game = { path = "../qua_game", version = "0.1.0" }
serde = { workspace = true, features = ["derive"] }
toml.workspace = true

