[package]
name = "qua-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qua_game = { path = "../qua_game", version = "0.1.0" }
qua_package = { path = "../qua_package", version = "0.1.0" }
axum = { workspace = true, features = ["ws", "headers", "macros", "multipart"] }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["io"] }
serde = { workspace = true, features = ["derive"] }
jsonwebtoken.workspace = true
serde_json.workspace = true
once_cell.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "postgres"] }
tower.workspace = true
tower-http = { workspace = true, features = ["cors", "trace"] }
http.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
rand.workspace = true
futures.workspace = true
log.workspace = true
